@@ -85,6 +85,7 @@ meta_workspace_free (MetaWorkspace *workspace)
     }
 
   g_assert (workspace->windows == NULL);
+  g_assert (workspace->mru_list == NULL);
 
   screen = workspace->screen;
   
