@@ -1,3 +1,9 @@
+2003-12-12  Havoc Pennington  <hp@redhat.com>
+
+	* src/window.c (meta_window_free): unstick window to get it out of
+	mru_list it should not be in; assert that window has been removed
+	from all mru_list. Perhaps fixes #122016 crash.
+
 2003-11-15  Rob Adams  <readams@readams.net>
 
 	* src/window.c (update_net_wm_type): don't set window->type_atom
